--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,31 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <!-- 百度地图 -->
+    <!-- <script type="text/javascript">
+      function initialize() {
+        // var mp = new BMap.Map('map')
+        // mp.centerAndZoom(new BMap.Point(121.491, 31.233), 11)
+        window.BMap = BMap
+      }
+
+      function loadScript() {
+        var script = document.createElement('script')
+        script.src =
+          'http://api.map.baidu.com/api?v=3.0&ak=ezNueSDOSPGkOTY5N2svM5ZpbzrATrXf&callback=initialize'
+        // 'http://api.map.baidu.com/api?v=3.0&ak=ezNueSDOSPGkOTY5N2svM5ZpbzrATrXf'
+        document.body.appendChild(script)
+      }
+
+      window.onload = loadScript
+    </script> -->
+
+    <!-- 高德地图 -->
+    <script
+      type="text/javascript"
+      src="https://webapi.amap.com/maps?v=2.0&key=0f01464965aa9fb16f7057ffb8a9431e"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
